CONCF-168 | CONCF-294 | Fix local navigation padding on small breakpoint

--- a/skins/oasis/css/core/breakpoints-layout.scss
+++ b/skins/oasis/css/core/breakpoints-layout.scss
@@ -86,6 +86,12 @@
 			padding: 0;
 		}
 	}
+	@media #{$breakpoint-small-only} {
+		.WikiHeader > nav.WikiNav .navbackground {
+			left: -24px;
+			width: 772px;
+		}
+	}
 
 	@media #{$breakpoint-medium-up} {
 		.wikia-main-page-tag-lcs, .main-page-tag-lcs-exploded {
